--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "jest": {
+    "testMatch": [
+      "<rootDir>/**/**"
+    ]
+  },
   "scripts": {
     "start": "sucrase-node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -16,6 +22,9 @@
     "sucrase": "^3.18.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5",
+    "jest": "^27.0.4",
     "nodemon": "^2.0.7"
   }
 }
