--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.12",
-    "sucrase": "^3.18.1"
+    "sucrase": "^3.18.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
